test/bugs-reported/bug2.bad
bug2.chpl:103: syntax error
